# TSTelemetryServer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example_frame.json
client/: main.py
include/: abstract_telemetry_serializer.h  config_handler.h  event_queue.h  json_telemetry_serializer.h  network_handler.h  scs_variable_saver.h  telemetry.h  telemetry_common.h  telemetry_job.h  telemetry_json.h  telemetry_trailer.h  telemetry_truck.h
src/: TSTelemetryServer.def  config_handler.cpp  event_queue.cpp  json_telemetry_serializer.cpp  network_handler.cpp  scs_variable_saver.cpp  trucksim_datagram.cpp  ts_telemetry_server.cpp
